--- a/Futurama/app/build.gradle
+++ b/Futurama/app/build.gradle
@@ -80,4 +80,11 @@ dependencies {
 
     //Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+
+    //Loading
+    implementation 'com.agrawalsuneet.androidlibs:dotsloader:1.4'
+
+    //Biometric
+    implementation "androidx.biometric:biometric-ktx:1.2.0-alpha04"
+
 }
