--- a/Futurama/build.gradle
+++ b/Futurama/build.gradle
@@ -12,6 +12,7 @@ buildscript{
 
     repositories {
         google()
+        jcenter()
         mavenCentral()
     }
     dependencies {
@@ -24,6 +25,7 @@ buildscript{
 allprojects {
     repositories {
         google()
+        jcenter()
         mavenCentral()
     }
 }
